<resources>
    <string name="app_name">Loanstic</string>
    <string name="sign_out">Sign out</string>
    <string name="settings">Settings</string>
    <string name="branches">Branches</string>
    <string name="borrowers">Borrowers</string>
    <string name="savings">Savings</string>
    <string name="deposits">Deposits</string>
    <string name="withdrawals">Withdrawals</string>
    <string name="loan">Loans</string>
    <string name="Repayment">Payments</string>
    <string name="collections">Collections</string>
    <string name="home">Home</string>
    <string name="google_maps_key">AIzaSyDljIVWu1Pi1RO1Gl9DQrYpoXfKQ5TnHC8</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_username_value">Icubed Developers</string>

    <string name="picture">Picture</string>
    <string name="description_info">Info</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="intro_message">intro message</string>


    <!-- fragment tags -->
    <string name="fragment_camera2">Camera2</string>
    <string name="fragment_view_stickers">View Stickers</string>
    <string name="default_notification_channel_id">93939929482</string>
    <string name="channel_name">notification</string>
    <string name="channel_description">notifications</string>
    <string name="blue_name">blue_name</string>


</resources>
